--- a/app/offline.html
+++ b/app/offline.html
@@ -21,16 +21,6 @@
   <!-- Fix for Viewport Units -->
   <script src="../bower_components/viewport-units-buggyfill/viewport-units-buggyfill.js"></script>
   <script src="../bower_components/viewport-units-buggyfill/viewport-units-buggyfill.hacks.js"></script>
-  <script type="text/javascript">
-    window.viewportUnitsBuggyfill.init({
-      // milliseconds to delay between updates of viewport-units
-      // caused by orientationchange, pageshow, resize events
-      refreshDebounceWait: 250,
-    
-      // provide hacks plugin to make the contentHack property work correctly.
-      hacks: window.viewportUnitsBuggyfillHacks
-    });
-  </script>
   <!-- tinavg-webapp -->
   <link rel="import" href="elements/tinavg-webapp.html">
   
@@ -40,18 +30,26 @@
   <!-- arabic alphabet
   غ	ظ	ض	ذ	خ	ث	ت	ش	ر	ق	ص	ف	ع	س	ن	م	ل	ك	ي	ط	ح	ز	و	ه	د	ج	ب	ا
   -->
-  <div id="friendly-message" hidden>If you see this message something is taking too long, please try reloading your browser. <a href="javascript:void(0)" onclick="hideFriendlyMessage();">Click here to hide this message</a></div>
+  <div id="friendly_message" hidden>If you see this message something is taking too long, please try reloading your browser. <a href="javascript:void(0)" onclick="hideFriendlyMessage();">Click here to hide this message</a></div>
   <tinavg-webapp></tinavg-webapp>
   <script type="text/javascript">
     function hideFriendlyMessage() {
-      document.getElementById('friendly-message').setAttribute('hidden', true);
+      document.getElementById('friendly_message').setAttribute('hidden', true);
     }
     setTimeout(function() {
       if(document.querySelector('[unresolved]')) {
-        document.getElementById('friendly-message').removeAttribute('hidden');
+        document.getElementById('friendly_message').removeAttribute('hidden');
         document.querySelector('[unresolved]').removeAttribute("unresolved");
       }
     }, 25000);
+    window.viewportUnitsBuggyfill.init({
+      // milliseconds to delay between updates of viewport-units
+      // caused by orientationchange, pageshow, resize events
+      refreshDebounceWait: 250,
+    
+      // provide hacks plugin to make the contentHack property work correctly.
+      hacks: window.viewportUnitsBuggyfillHacks
+    });
   </script>
 </body>
 </html>
