--- a/app/elements/tinavg-webapp.html
+++ b/app/elements/tinavg-webapp.html
@@ -3,11 +3,15 @@
 <!-- Layout/Polymer Elements -->
 <link rel="import" href="../../bower_components/iron-flex-layout/iron-flex-layout.html">
 <link rel="import" href="../../bower_components/paper-header-panel/paper-header-panel.html">
-<link rel="import" href="../../bower_components/paper-toolbar/paper-toolbar.html">
 <link rel="import" href="../../bower_components/iron-collapse/iron-collapse.html">
 <link rel="import" href="../../bower_components/iron-icons/iron-icons.html">
-<link rel="import" href="country-flags.html">
+<link rel="import" href="../../bower_components/paper-toggle-button/paper-toggle-button.html">
+<link rel="import" href="../../bower_components/iron-selector/iron-selector.html">
+<link rel="import" href="../../bower_components/paper-menu/paper-menu.html">
+<link rel="import" href="../../bower_components/paper-item/paper-item.html">
+
 <!-- Custom Elements Vulcanized -->
+<link rel="import" href="country-flags.html">
 <link rel="import" href="elements.html">
 <!-- keyboard shortcuts -->
 <script src="../assets/js/mousetrap.min.js"></script>
@@ -24,28 +28,28 @@
           </div>
           <word-board id="wboard" class="horizontal center-justified layout flex-2" lang-code="{{currLang}}"></word-board>
           <div class="horizontal end-justified layout flex">
-            <iron-icon id="menutoggle" class="spin-flip-transition" icon="trending-neutral" on-tap="toggleCoreCollapse"></iron-icon>
+            <iron-icon id="menutoggle" class="spin-flip-transition tinavg-med-icon" icon="trending-neutral" on-tap="toggleCoreCollapse"></iron-icon>
           </div>
         </div>
         <div class="core-header horizontal justified layout center">
           <div class="top-right-item horizontal start-justified layout flex">
-            <iron-icon id="help-show" icon="help" on-tap="showHelp"></iron-icon>
-            <iron-icon id="switchModusIcon" class="spin-flip-transition flag-svg" icon="{{flagIcon}}" on-tap="switchModus"></iron-icon>
+            <iron-icon id="help-show" class="tinavg-med-icon" icon="help" on-tap="showHelp"></iron-icon>
+            <div id="switchModusIcon" class="spin-flip-transition flag-svg tinavg-med-icon flag-div" on-tap="switchModus"></div>
+            <!--<iron-icon id="switchModusIcon" class="spin-flip-transition flag-svg tinavg-med-icon" icon="{{flagIcon}}" on-tap="switchModus"></iron-icon>-->
           </div>
           <div class="horizontal center-justified layout flex-2">
             <jumbotron-text id="jt" tabindex="{{jumbotronIndex}}" learnmodus="{{learnmodus}}"></jumbotron-text>
-            <div id="click_jtext" hidden>Click</div>
           </div>
           <div id="nerdmodus-div" class="horizontal end-justified layout flex">
             <score-board id="score-board-player-2" player="2" hidden></score-board>
-            <div id="clue-show-div"><iron-icon id="clueshow" class="spin-flip-transition" icon="text-format" on-tap="showClue"></iron-icon></div>
+            <div id="clue-show-div"><iron-icon id="clueshow" class="spin-flip-transition tinavg-med-icon" icon="text-format" on-tap="showClue"></iron-icon></div>
           </div>
         </div>
       </div>
       <div class="content">
         <section id="overlaycontainer">
           <div id="helpoverlay" class="help-box">
-            <div id="close-help-overlay"><iron-icon id="close-help-overlay-icon" icon="cancel" on-tap="showHelp"></iron-icon></div>
+            <div id="close-help-overlay"><iron-icon id="close-help-overlay-icon" class="tinavg-med-icon" icon="cancel" on-tap="showHelp"></iron-icon></div>
             <center><h2>This Is Not A Vocabulary Game</h2></center>
             <h3>The Goal</h3>
             <p>Learn the alphabet (shapes and sounds) and spelling patterns of a foreign language.</p>
@@ -61,12 +65,12 @@
             </ol>
             <h3>The Buttons</h3>
             <ol>
-              <li><iron-icon id="help-overlay-menutoggle" icon="trending-neutral"></iron-icon>: Reveals the options menu</li>
-              <li><iron-icon id="help-overlay-a" icon="text-format"></iron-icon>: Goes through the letter sequence, then says the word aloud</li>
-              <li><iron-icon id="help-overlay-help-show" icon="help"></iron-icon>: Shows this help menu.</li>
-              <li><iron-icon id="help-overlay-switchModusIcon" icon="country-flags:de"></iron-icon>: Switches the language.  Does NOT check word.</li>
-              <li><iron-icon icon="av:mic"></iron-icon>: Record voice in Talkmodus.  Also stops recording.</li>
-              <li><iron-icon icon="av:play-circle-fill"></iron-icon>: Play voice recording.  Also stops recording.</li>
+              <li><iron-icon id="help-overlay-menutoggle" icon="trending-neutral" class="tinavg-med-icon"></iron-icon>: Reveals the options menu</li>
+              <li><iron-icon id="help-overlay-a" icon="text-format" class="tinavg-med-icon"></iron-icon>: Goes through the letter sequence, then says the word aloud</li>
+              <li><iron-icon id="help-overlay-help-show" icon="help" class="tinavg-med-icon"></iron-icon>: Shows this help menu.</li>
+              <li><iron-icon id="help-overlay-switchModusIcon" icon="country-flags:de" class="tinavg-med-icon"></iron-icon>: Switches the language.  Does NOT check word.</li>
+              <li><iron-icon icon="av:mic" class="tinavg-med-icon"></iron-icon>: Record voice in Talkmodus.  Also stops recording.</li>
+              <li><iron-icon icon="av:play-circle-fill" class="tinavg-med-icon"></iron-icon>: Play voice recording.  Also stops recording.</li>
               <li>Target Word: You can click this to have the word spoken outloud.</li>
             </ol>
             <div id="help-lang-specific"></div>
@@ -82,15 +86,17 @@
                   <option value="en">English</option>
                   <option value="en-US-south">English (US South)</option>
                   <option value="ar">Arabic</option>
+                  <option value="ko">Korean</option>
+                  <option value="ru">Russian</option>
                   <!--
                   <option value="tr">Turkish</option>
                   -->
                 </select>
               </div>
-              <div><br />Earmodus: <button id="select-earmodus" on-tap="toggleEarModus">toggle</button></div>
-              <div><br />Learnmodus: <button id="select-learnmodus" on-tap="toggleLearnModus">toggle</button></div>
-              <div><br />Talkmodus: <button id="select-recordmodus" on-tap="toggleRecordModus">toggle</button></div>
-              <div><br />BuggyFill: <button id="select-buggyfill" on-tap="refreshBuggyFill">toggle</button></div>
+              <div><br />Earmodus: <paper-toggle-button id="select_earmodus" on-tap="toggleEarModus"></paper-toggle-button></div>
+              <div><br />Learnmodus: <paper-toggle-button id="select-learnmodus" on-tap="toggleLearnModus"></paper-toggle-button></div>
+              <div><br />Talkmodus: <paper-toggle-button id="select-recordmodus" on-tap="toggleRecordModus"></paper-toggle-button></div>
+              <div><br />BuggyFill: <paper-toggle-button id="select-buggyfill" on-tap="refreshBuggyFill"></paper-toggle-button></div>
               <div hidden><br />Nerdmodus: <button id="select-nerdmodus" on-tap="toggleNerdModus">toggle</button></div>
             </div>
           </iron-collapse>
@@ -132,6 +138,10 @@
       flagIcon: {
         type: String,
         computed: 'flagIconString(currLang)'
+      },
+      languageList: {
+        type: Array,
+        value: function() { return ['de', 'en', 'en-US-south', 'ar',"ko", "ru"]; }
       }
     },
     listeners: {
@@ -192,6 +202,25 @@
       });
       document.getElementById('friendly_message').setAttribute('hidden', true);
       document.querySelector('[unresolved]').removeAttribute("unresolved");
+      //preload flags
+      for(var i = 0; i < this.languageList.length; i++) {
+        new Image().src = "/assets/images/" + this.languageList[i] + ".png";
+      }
+      /*
+      var fixIcons = document.querySelectorAll(".iron-icon-0");
+      for(var i = 0; i < fixIcons.length; i++) {
+        fixIcons[i].classList.remove("iron-icon-0");
+        if(fixIcons[i].classList.contains("tinavg-med-icon")) {
+          fixIcons[i].style.height = "7vh";
+          fixIcons[i].style.width = "7vh";
+        }
+        if(fixIcons[i].classList.contains("recorder-icon")) {
+          fixIcons[i].style.height = "25vw";
+          fixIcons[i].style.width = "25vw";
+        }
+        //fixIcons[i].classList.add("iron-icon-0");
+      }
+      */
 
     },
     setLangHelp: function(e) {
@@ -251,27 +280,41 @@
       this.currLang = ev.target.value;
       this.$.jt.resetBox();
     },
+    setLangManual: function(lang) {
+      console.log("toggling language: " + lang + " | chars: " + this.letterLimit);
+      this.currLang = lang;
+      this.$.jt.resetBox();
+    },
+    setLang2: function(ev) {
+      console.log(ev);
+      console.log("toggling language: " + ev.target.value + " | chars: " + this.letterLimit);
+      this.currLang = ev.detail.item.lang;
+      this.$.jt.resetBox();
+    },
     setWBoardDisplay: function(ev) {
       console.log("changing diacritics");
       this.$.wboard.setDisplayWord();
     },
     switchModus: function(ev) {
       var deg = 0;
-      var languageList = ['de', 'en', 'en-US-south', 'ar'];
+      var languageList = this.languageList;
       var nextLang = (languageList.indexOf(this.currLang) === -1 || languageList.indexOf(this.currLang) + 1 >= languageList.length) ? 0 : languageList.indexOf(this.currLang) + 1;
       this.currLang = languageList[nextLang];
+      this.$.switchModusIcon.style.background = "url(/assets/images/" + this.currLang + ".png) center center no-repeat";
+      this.$.switchModusIcon.style.backgroundSize = "contain";
       this.$.jt.resetBox();
       if(nextLang === 0 || !this.$.switchModusIcon.style.transform) {
         deg = 360; 
       } else {
         deg = parseInt(this.$.switchModusIcon.style.transform.match(/\d+/)[0]) + 360;
       }
-      this.$.switchModusIcon.style.transform = "rotateY("+ deg + "deg)";
+      this.async(function() {
+        this.$.switchModusIcon.style.transform = "rotateY("+ deg + "deg)";
+      });
     },
     flagIconString: function(lang) {
       return "country-flags:" + lang;
     }
   });
-
 
 </script>
